[gd_scene load_steps=25 format=3 uid="uid://e6x7mjx4ab1l"]

[ext_resource type="Script" path="res://Levels/CanvasLayer.gd" id="1_epqhj"]
[ext_resource type="Script" path="res://Levels/Map3.gd" id="1_xgm5x"]
[ext_resource type="PackedScene" uid="uid://cbfcb208yyi6s" path="res://Characters/spren.tscn" id="2_5xwds"]
[ext_resource type="PackedScene" uid="uid://cwx63b6pq552y" path="res://UI/text_box.tscn" id="3_a4i5a"]
[ext_resource type="Texture2D" uid="uid://53cacos5sw6i" path="res://Art/Maps/Map3_base.png" id="5_chcqg"]
[ext_resource type="Texture2D" uid="uid://bpc3der6ddrya" path="res://Art/Maps/Map3_outer.png" id="6_3qmfs"]
[ext_resource type="Texture2D" uid="uid://dlphayrhwftcr" path="res://Art/Maps/Objects/Map3_drums.png" id="7_g5a4d"]
[ext_resource type="Texture2D" uid="uid://dpcdgpdemigou" path="res://Art/Maps/Objects/Map3_flags.png" id="8_1nhxq"]
[ext_resource type="Texture2D" uid="uid://bdy10k0ecd1ro" path="res://Art/Maps/Objects/Map3_houses.png" id="9_ihkwb"]
[ext_resource type="Texture2D" uid="uid://ntvtoe44vq5v" path="res://Art/Charm.PNG" id="10_s1hga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4fs66"]
resource_local_to_scene = true
size = Vector2(730.339, 2941.18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iea4r"]
size = Vector2(288.001, 140)

[sub_resource type="CircleShape2D" id="CircleShape2D_di4h2"]
radius = 29.0186

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dalv0"]
size = Vector2(40.7504, 244)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4ndu"]
size = Vector2(143, 68.5003)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jaugx"]
size = Vector2(36.0013, 242.626)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8h0gi"]
size = Vector2(1101.5, 29.8748)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bann7"]
size = Vector2(32.7507, 238.251)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r44ig"]
size = Vector2(1101.75, 108.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35qgq"]
size = Vector2(237.001, 230.001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cjfs"]
size = Vector2(275.499, 330.001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0c56b"]
size = Vector2(168.004, 170)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgpr3"]
size = Vector2(88.9966, 197.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yxkhg"]
size = Vector2(255.499, 158)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_xgm5x")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 26
position = Vector2(-530, -10)
zoom = Vector2(2, 2)
limit_left = -550
limit_top = -275
limit_right = 550
limit_bottom = 275
drag_vertical_enabled = true
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
layer = 8
script = ExtResource("1_epqhj")

[node name="Tab_Overlay" type="Panel" parent="Camera2D/CanvasLayer"]
z_index = 1000
offset_left = 6.0
offset_top = 16.0
offset_right = 110.0
offset_bottom = 29.0
scale = Vector2(2, 2)

[node name="tab_open" type="Label" parent="Camera2D/CanvasLayer/Tab_Overlay"]
layout_mode = 0
offset_left = 5.0
offset_right = 199.0
offset_bottom = 26.0
scale = Vector2(0.5, 0.5)
text = "Press TAB to see controls"

[node name="Control_Overlay" type="Panel" parent="Camera2D/CanvasLayer"]
visible = false
z_index = 100
offset_left = -2.0
offset_top = -2.0
offset_right = 606.0
offset_bottom = 307.0
scale = Vector2(2, 2)

[node name="tab_close" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 203.0
offset_bottom = 35.0
scale = Vector2(0.5, 0.5)
text = "Press TAB to close"

[node name="Overworld" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 148.0
offset_top = 55.0
offset_right = 230.0
offset_bottom = 81.0
scale = Vector2(0.8, 0.8)
text = "Overworld"

[node name="Rhythm" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 413.0
offset_top = 55.0
offset_right = 474.0
offset_bottom = 81.0
scale = Vector2(0.8, 0.8)
text = "Rhythm
"

[node name="Controls" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 260.0
offset_top = 23.0
offset_right = 326.0
offset_bottom = 49.0
text = "Controls"

[node name="OverworldControls" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 134.0
offset_top = 75.0
offset_right = 291.0
offset_bottom = 205.0
scale = Vector2(0.6, 0.6)
text = "Up: W
Left: A
Down: S
Right: D
Interact: Space"
horizontal_alignment = 3

[node name="RhythmControls" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 389.0
offset_top = 76.0
offset_right = 549.0
offset_bottom = 206.0
scale = Vector2(0.6, 0.6)
text = "Left: A
Center-Left: S
Center: Space
Center-Right: K
Right: L
Quit: Esc"
horizontal_alignment = 3

[node name="Spren" parent="." instance=ExtResource("2_5xwds")]
z_index = 1
position = Vector2(-530, -10)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Spren"]
remote_path = NodePath("../../Camera2D")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(515.998, 2)
scale = Vector2(0.999998, 0.999998)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(19.002, -115)
scale = Vector2(0.051, 0.051)
shape = SubResource("RectangleShape2D_4fs66")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-898, -168)
shape = SubResource("RectangleShape2D_iea4r")

[node name="DrumCollision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(9.00238, -3.00001)
shape = SubResource("CircleShape2D_di4h2")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(16.3776, 148)
shape = SubResource("RectangleShape2D_dalv0")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-417, 217)
shape = SubResource("RectangleShape2D_j4ndu")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-1047, 149.688)
shape = SubResource("RectangleShape2D_jaugx")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-514.749, 259.938)
shape = SubResource("RectangleShape2D_8h0gi")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1050.38, -163.125)
shape = SubResource("RectangleShape2D_bann7")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-514.874, -226.25)
shape = SubResource("RectangleShape2D_r44ig")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-689.499, 132)
shape = SubResource("RectangleShape2D_35qgq")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-317.747, -116)
shape = SubResource("RectangleShape2D_7cjfs")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-671.999, -161)
shape = SubResource("RectangleShape2D_0c56b")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-180.998, -86.2502)
shape = SubResource("RectangleShape2D_pgpr3")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-936.25, 175)
shape = SubResource("RectangleShape2D_yxkhg")

[node name="TextBox" parent="." instance=ExtResource("3_a4i5a")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="Map3Base" type="Sprite2D" parent="."]
z_index = -7
scale = Vector2(0.051, 0.051)
texture = ExtResource("5_chcqg")

[node name="Map3Outer" type="Sprite2D" parent="."]
z_index = 5
scale = Vector2(0.051, 0.051)
texture = ExtResource("6_3qmfs")

[node name="Map3Drums" type="Sprite2D" parent="."]
scale = Vector2(0.051, 0.051)
texture = ExtResource("7_g5a4d")

[node name="Map3Flags" type="Sprite2D" parent="."]
scale = Vector2(0.051, 0.051)
texture = ExtResource("8_1nhxq")

[node name="Map3Houses" type="Sprite2D" parent="."]
z_index = 7
scale = Vector2(0.051, 0.051)
texture = ExtResource("9_ihkwb")

[node name="Charm" type="Sprite2D" parent="."]
position = Vector2(528, -3)
scale = Vector2(0.02, 0.02)
texture = ExtResource("10_s1hga")

[connection signal="force_quit" from="TextBox" to="." method="_on_text_box_force_quit"]
[connection signal="text_finished" from="TextBox" to="." method="_on_text_box_text_finished"]
